--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@angular/router": "^16.2.0",
     "rxjs": "^7.8.1",
     "tslib": "^2.6.1",
-    "zone.js": "^0.13.1"
+    "zone.js": "~0.13.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.1.7",
